--- a/ProjLinq/ProjLinq.csproj
+++ b/ProjLinq/ProjLinq.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Class.cs" />
     <Compile Include="ClassDbContext.cs" />
+    <Compile Include="grades.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shool.cs" />
